<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.Library">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/musapp1"
        android:scaleY="2"
        android:scaleX="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/LargeMargin"
        android:orientation="vertical" >

        <TextView
            style="@style/DesBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginBottom="8dp"
            android:text="@string/LDesc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/playlist"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LPlaylistTitle"/>

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="0dp"
            android:layout_weight="5" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MMMargins"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LPlaylistSong1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LPlaylistSong2"/>

            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/txtViewMainMenuStyle"
            android:id="@+id/Playlist"
            android:text="@string/PName"
            android:layout_weight=".2"
            android:layout_marginTop="@dimen/LinMargin"
            android:layout_marginBottom="@dimen/ButtonMinorMargin" />

        <TextView
            android:id="@+id/mainMenu"
            android:layout_weight=".2"
            android:layout_marginTop="@dimen/ButtonMinorMargin"
            style="@style/txtViewMainMenuStyle" />

    </LinearLayout>

</RelativeLayout>
