<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.Search">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/musapp1"
        android:scaleY="2"
        android:scaleX="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/DesBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/SDesc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ArtistSearchImage"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/searchmusapp"/>

            <TextView
                android:text="@string/SHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/note"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/note"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/note"/>

        </LinearLayout>

        <TextView
            android:text="@string/Recommendations"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            style="@style/txtViewMainMenuStyle"
            android:id="@+id/NowPlay"
            android:text="@string/NPName"
            android:layout_weight=".2"
            android:layout_marginTop="@dimen/ButtonMinorMargin"
            android:layout_marginBottom="@dimen/ButtonMinorMargin" />

        <TextView
            style="@style/txtViewMainMenuStyle"
            android:id="@+id/mainMenu"
            android:layout_weight=".2"
            android:layout_marginTop="@dimen/ButtonMinorMargin" />
    </LinearLayout>

</RelativeLayout>
